# stone-chatbot-analysis-chalange

./: Dockerfile  README.md  app.py  main.py  pyproject.toml  upload.py
pages/: 1_Estrutura_Dados.py  2_Analise_de_Agosto.py  3_Projeção_Fim_2025.py  4_Visão_Geral.py  5_Tópicos.py  6_Assuntos.py  7_Comparação_de_Tecnologias.py  8_Qualidade_dos_Dados.py  9_Análise_de_Funil.py
pages/utils/: charts.py  data_loader.py
